--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
